welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: type mismatch;
 found   : Unit
 required: Boolean
  if (vuBiscuit = false) {
                ^Program:5: error: type mismatch;
 found   : Unit
 required: Boolean
    for (cpt <- 1 to 6) {
             ^Program:4: error: type mismatch;
 found   : Unit
 required: Boolean
  if (vuBiscuit = false) {
  ^