welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
var vuBiscuit = false

def haveBaggle():Boolean = {
  if (vuBiscuit = false) {
    for (cpt <- 1 to 6) {
    avance()
    if (estSurBiscuit) {
      vuBiscuit = true
    }
    recule()
  	}
  }
  
 
}



